data/derived/comb/progs/unify/prog4892.ml.out
Characters 227-242:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type (int * 'a list) list * 'b list
       Type int is not compatible with type int * 'a list 
